# mini-factor

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  meson.build  mini_factor.cpp
t/: factor.t
